[project]
dependencies = [
  "basicsr",
  "realesrgan>=0.3.0",
]
dynamic = ["version"]
name = "clean_anime_image"
requires-python = ">=3.12"

[project.scripts]
clean_anime_image = "clean_anime_image:main"

[tool.setuptools]
packages = ["clean_anime_image"]

[tool.uv.sources]
basicsr = {git = "https://github.com/XPixelGroup/BasicSR.git"}
